--- a/client/src/auth/auth.css
+++ b/client/src/auth/auth.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Saira:wght@500&display=swap');
+
 .select-learner{
 	margin : 3% 3% 1% 8%;
+	font-family: 'Nunito Sans', sans-serif !important;
 }
 .learner-overview{
 	display: flex;
@@ -28,6 +31,20 @@
 	width:100%;
 	margin-left : 8%;
 	margin-bottom: 40px;
+}
+.form-input{
+	border: 1px solid #917EBD;
+}
+.auth-button {
+	padding : 10px !important;
+	font-size: 18px !important;
+}
+.form-class{
+	width: 500px !important;
+	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.childacc-inline{
+	display: flex ;
 }
 hr {
 	border: none;
