--- a/client/src/auth/auth.css
+++ b/client/src/auth/auth.css
@@ -53,6 +53,21 @@ hr {
 	width: 50%;
 	border-width: thin;
   }
+
+.otp-field {
+    width: 50px;
+    margin-right: 10px;
+    padding-left: 15px;
+    height: 60px;
+	font-size: 25px;
+	font-weight: 700;
+	border: 3px solid #917EBD;
+	border-radius: 3px;
+}
+
+.otp-button{
+
+}
 /* body{
 	background-color: #E5E5E5;
 } */
